--- a/src/app/core/help/help.component.html
+++ b/src/app/core/help/help.component.html
@@ -5,7 +5,7 @@
 		<div class="col-lg-3 col-xl-2 help-menu" role="complementary">
 			<nav class="card">
 				<ul class="nav flex-column">
-					<li *ngFor="let topic of helpTopics" class="nav-item" role="presentation">
+					<li class="nav-item" role="presentation" *ngFor="let topic of helpTopics">
 						<a
 							class="nav-link no-href btn-link"
 							routerLinkActive="selected"
