--- a/src/app/common/table/expander/asy-expander-column.component.html
+++ b/src/app/common/table/expander/asy-expander-column.component.html
@@ -1,10 +1,10 @@
 <ng-container cdkColumnDef [sticky]="_sticky" [stickyEnd]="_stickyEnd">
-	<th cdk-header-cell *cdkHeaderCellDef style="width: 42px"></th>
+	<th cdk-header-cell style="width: 42px" *cdkHeaderCellDef></th>
 	<td cdk-cell *cdkCellDef="let item; let index = index">
 		<div
 			style="cursor: pointer"
-			(click)="toggle(index, item)"
 			*ngIf="isExpandable(index, item)"
+			(click)="toggle(index, item)"
 		>
 			<span
 				class="fa-solid fa-2x fa-angle-down"
