--- a/src/app/common/table/filter/asy-header-date-filter/asy-header-date-filter.component.html
+++ b/src/app/common/table/filter/asy-header-date-filter/asy-header-date-filter.component.html
@@ -1,27 +1,27 @@
-<span class="dropdown" container="body" [insideClick]="true" dropdown>
+<span class="dropdown" container="body" dropdown [insideClick]="true">
 	<button class="dropdown-toggle dropdown-toggle-hide-caret" dropdownToggle>
 		<span
-			[hidden]="isFiltered"
 			class="filter fa-solid fa-list"
-			tooltip="Apply Filters"
-			placement="bottom"
 			container="body"
+			placement="bottom"
+			tooltip="Apply Filters"
+			[hidden]="isFiltered"
 		></span>
 		<span
-			[hidden]="!isFiltered"
 			class="filter fa-solid fa-filter"
-			tooltip="Edit Filters"
-			placement="bottom"
 			container="body"
+			placement="bottom"
+			tooltip="Edit Filters"
+			[hidden]="!isFiltered"
 		></span>
 	</button>
 
-	<div *dropdownMenu class="dropdown-menu" [class.dropdown-menu-right]="dropdownMenuRight">
+	<div class="dropdown-menu" [class.dropdown-menu-right]="dropdownMenuRight" *dropdownMenu>
 		<div class="form-check">
 			<input
 				class="form-check-input"
-				type="checkbox"
 				id="date-filter-enabled"
+				type="checkbox"
 				[(ngModel)]="enabled"
 				(ngModelChange)="onFilterChange()"
 			/>
@@ -31,11 +31,11 @@
 		<div class="form-check form-check-inline pr-0">
 			<input
 				class="form-check-input"
-				type="radio"
 				id="dir-radio-past"
+				type="radio"
 				value="past"
-				[disabled]="isCustom"
 				[(ngModel)]="direction"
+				[disabled]="isCustom"
 				(ngModelChange)="onDateFilterChange()"
 			/>
 			<label class="form-check-label" for="dir-radio-past">Past</label>
@@ -43,11 +43,11 @@
 		<div class="form-check form-check-inline pl-0">
 			<input
 				class="form-check-input"
-				type="radio"
 				id="dir-radio-next"
+				type="radio"
 				value="next"
-				[disabled]="isCustom"
 				[(ngModel)]="direction"
+				[disabled]="isCustom"
 				(ngModelChange)="onDateFilterChange()"
 			/>
 			<label class="form-check-label" for="dir-radio-next">Next</label>
@@ -55,26 +55,26 @@
 
 		<div class="input-group">
 			<input
-				id="dateCountInput"
 				class="form-control"
+				id="dateCountInput"
 				type="number"
 				min="1"
 				[(ngModel)]="count"
-				(ngModelChange)="onDateFilterChange()"
 				[disabled]="isCustom"
+				(ngModelChange)="onDateFilterChange()"
 			/>
 			<div class="input-group-append">
 				<ng-select
 					id="dateDurationInput"
-					[items]="['hour', 'day', 'week', 'month', 'year']"
-					[disabled]="isCustom"
 					[(ngModel)]="duration"
-					(ngModelChange)="onDateFilterChange()"
 					[clearable]="false"
+					[disabled]="isCustom"
+					[items]="['hour', 'day', 'week', 'month', 'year']"
 					[searchable]="false"
 					(click)="$event.stopPropagation()"
+					(ngModelChange)="onDateFilterChange()"
 				>
-					<ng-template ng-option-tmp ng-label-tmp let-item="item">
+					<ng-template let-item="item" ng-label-tmp ng-option-tmp>
 						{{ item | titlecase }}{{ count > 1 ? 's' : '' }}
 					</ng-template>
 				</ng-select>
@@ -84,8 +84,8 @@
 		<div class="form-check">
 			<input
 				class="form-check-input"
-				type="checkbox"
 				id="custom-date-filter-enabled"
+				type="checkbox"
 				[(ngModel)]="isCustom"
 				(ngModelChange)="onDateFilterChange()"
 			/>
@@ -93,18 +93,18 @@
 		</div>
 		<div class="form-group mb-0">
 			<input
-				type="text"
-				placeholder="Custom range..."
 				class="form-control"
+				type="text"
 				bsDaterangepicker
+				placeholder="Custom range..."
+				[(ngModel)]="customRange"
 				[bsConfig]="{
 					isAnimated: true,
 					adaptivePosition: true,
 					containerClass: 'theme-default'
 				}"
-				[(ngModel)]="customRange"
-				(ngModelChange)="onDateFilterChange()"
 				[disabled]="!isCustom"
+				(ngModelChange)="onDateFilterChange()"
 			/>
 		</div>
 	</div>
