--- a/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
+++ b/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
@@ -1,32 +1,32 @@
-<span class="dropdown" container="body" [insideClick]="true" dropdown>
+<span class="dropdown" container="body" dropdown [insideClick]="true">
 	<button class="dropdown-toggle dropdown-toggle-hide-caret" dropdownToggle>
 		<span
-			[hidden]="isFiltered"
 			class="filter fa-solid fa-list"
-			tooltip="Apply Filters"
-			placement="bottom"
 			container="body"
+			placement="bottom"
+			tooltip="Apply Filters"
+			[hidden]="isFiltered"
 		></span>
 		<span
-			[hidden]="!isFiltered"
 			class="filter fa-solid fa-filter"
-			tooltip="Edit Filters"
-			placement="bottom"
 			container="body"
+			placement="bottom"
+			tooltip="Edit Filters"
+			[hidden]="!isFiltered"
 		></span>
 	</button>
 
 	<div
-		*dropdownMenu
 		class="dropdown-menu d-flex flex-column"
 		[ngClass]="{ 'dropdown-menu-right': dropdownMenuRight }"
+		*dropdownMenu
 	>
 		<ng-container *ngIf="showSearch">
 			<div class="search mt-2">
 				<asy-search-input
 					placeholder="Search..."
-					(applySearch)="onSearchOptions($event)"
 					[search]="search"
+					(applySearch)="onSearchOptions($event)"
 				>
 				</asy-search-input>
 			</div>
@@ -45,11 +45,11 @@
 		</ng-container>
 		<div class="flex-grow-1 overflow-auto my-2">
 			<ng-container *ngFor="let option of _options">
-				<div *ngIf="!option.hide" class="form-check">
+				<div class="form-check" *ngIf="!option.hide">
 					<input
 						class="form-check-input"
-						type="checkbox"
 						id="filter-{{ id }}-option-{{ option.value }}"
+						type="checkbox"
 						[(ngModel)]="option.active"
 						[ngModelOptions]="{ standalone: true }"
 						(ngModelChange)="onFilterChange()"
@@ -72,9 +72,9 @@
 				>
 					<input
 						class="form-check-input"
-						type="radio"
-						name="operator-option-radio"
 						id="operator-option-{{ i }}"
+						name="operator-option-radio"
+						type="radio"
 						[value]="operatorOption"
 						[(ngModel)]="matchAll"
 						(ngModelChange)="onFilterChange()"
