--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
@@ -1,7 +1,7 @@
 <app-flyout label="Feedback">
 	<div
-		#flyoutContent
 		class="feedback-form feedback-{{ status }} d-flex flex-column flex-grow-1 h-100"
+		#flyoutContent
 	>
 		<ng-container *ngIf="status === 'ready'">
 			<form #form="ngForm">
@@ -10,14 +10,14 @@
 				<div class="form-check pl-0">
 					<input
 						class="form-check-input"
-						type="radio"
-						name="type-option-radio"
 						id="fo-type-option-1"
+						name="type-option-radio"
+						type="radio"
 						value="general feedback"
-						[(ngModel)]="feedback.type"
 						required
+						[(ngModel)]="feedback.type"
 					/>
-					<label for="fo-type-option-1" class="form-check-label mb-2"
+					<label class="form-check-label mb-2" for="fo-type-option-1"
 						>Ask a question or make a comment</label
 					>
 				</div>
@@ -29,14 +29,14 @@
 				<div class="form-check pl-0">
 					<input
 						class="form-check-input"
-						type="radio"
-						name="type-option-radio"
 						id="fo-type-option-2"
+						name="type-option-radio"
+						type="radio"
 						value="feature request"
-						[(ngModel)]="feedback.type"
 						required
+						[(ngModel)]="feedback.type"
 					/>
-					<label for="fo-type-option-2" class="form-check-label mb-2"
+					<label class="form-check-label mb-2" for="fo-type-option-2"
 						>Suggest a new feature</label
 					>
 				</div>
@@ -48,14 +48,14 @@
 				<div class="form-check pl-0">
 					<input
 						class="form-check-input"
-						type="radio"
-						name="type-option-radio"
 						id="fo-type-option-3"
+						name="type-option-radio"
+						type="radio"
 						value="bug report"
-						[(ngModel)]="feedback.type"
 						required
+						[(ngModel)]="feedback.type"
 					/>
-					<label for="fo-type-option-3" class="form-check-label mb-2"
+					<label class="form-check-label mb-2" for="fo-type-option-3"
 						>Report a bug/error</label
 					>
 				</div>
@@ -66,14 +66,14 @@
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
-							type="radio"
-							name="subtype-option-radio"
 							id="fo-subtype-option-1"
+							name="subtype-option-radio"
+							type="radio"
 							value="Content or data"
-							[(ngModel)]="feedback.subType"
 							required
+							[(ngModel)]="feedback.subType"
 						/>
-						<label for="fo-subtype-option-1" class="form-check-label mb-2"
+						<label class="form-check-label mb-2" for="fo-subtype-option-1"
 							>Content or data</label
 						>
 					</div>
@@ -81,14 +81,14 @@
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
-							type="radio"
-							name="subtype-option-radio"
 							id="fo-subtype-option-2"
+							name="subtype-option-radio"
+							type="radio"
 							value="Styling"
-							[(ngModel)]="feedback.subType"
 							required
+							[(ngModel)]="feedback.subType"
 						/>
-						<label for="fo-subtype-option-2" class="form-check-label mb-2"
+						<label class="form-check-label mb-2" for="fo-subtype-option-2"
 							>Styling</label
 						>
 					</div>
@@ -96,14 +96,14 @@
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
-							type="radio"
-							name="subtype-option-radio"
 							id="fo-subtype-option-3"
+							name="subtype-option-radio"
+							type="radio"
 							value="Technical"
-							[(ngModel)]="feedback.subType"
 							required
+							[(ngModel)]="feedback.subType"
 						/>
-						<label for="fo-subtype-option-3" class="form-check-label mb-2"
+						<label class="form-check-label mb-2" for="fo-subtype-option-3"
 							>Technical</label
 						>
 					</div>
@@ -111,35 +111,35 @@
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
-							type="radio"
-							name="subtype-option-radio"
 							id="fo-subtype-option-4"
+							name="subtype-option-radio"
+							type="radio"
 							value="Other"
-							[(ngModel)]="feedback.subType"
 							required
+							[(ngModel)]="feedback.subType"
 						/>
-						<label for="fo-subtype-option-4" class="form-check-label mb-2">Other</label>
+						<label class="form-check-label mb-2" for="fo-subtype-option-4">Other</label>
 					</div>
 					<div class="mb-2" *ngIf="feedback.subType === 'Other'">
 						<input
 							class="form-control"
 							name="other-description"
-							[(ngModel)]="feedback.otherText"
 							required
+							[(ngModel)]="feedback.otherText"
 						/>
 					</div>
 
 					<div class="form-check pl-0">
 						<input
 							class="form-check-input"
-							type="radio"
-							name="subtype-option-radio"
 							id="fo-subtype-option-5"
+							name="subtype-option-radio"
+							type="radio"
 							value="Unsure"
-							[(ngModel)]="feedback.subType"
 							required
+							[(ngModel)]="feedback.subType"
 						/>
-						<label for="fo-subtype-option-5" class="form-check-label mb-2"
+						<label class="form-check-label mb-2" for="fo-subtype-option-5"
 							>Unsure</label
 						>
 					</div>
@@ -149,41 +149,41 @@
 				</ng-container>
 
 				<ng-template #textInput>
-					<div *ngIf="classificationOptions" class="form-group pt-2">
+					<div class="form-group pt-2" *ngIf="classificationOptions">
 						<ng-select
-							[items]="classificationOptions"
-							[clearable]="false"
-							bindLabel="level"
-							[(ngModel)]="feedback.classification"
 							name="classification"
-							required
-							placeholder="Select Classification"
+							bindLabel="level"
 							dropdownPosition="bottom"
+							placeholder="Select Classification"
+							required
+							[(ngModel)]="feedback.classification"
+							[clearable]="false"
+							[items]="classificationOptions"
 						>
 						</ng-select>
 					</div>
 
 					<div class="form-group" [class.mb-0]="feedback.type === 'bug report'">
 						<textarea
-							name="text"
 							class="form-control"
+							name="text"
+							placeholder="Enter Feedback"
+							required
 							style="height: 8rem"
 							[(ngModel)]="feedback.body"
-							required
-							placeholder="Enter Feedback"
 						>
 						</textarea>
 					</div>
 				</ng-template>
 			</form>
 			<div class="d-flex justify-content-center p-3 border-top">
-				<button type="button" class="btn btn-link mr-2" (click)="closeForm()">
+				<button class="btn btn-link mr-2" type="button" (click)="closeForm()">
 					Cancel
 				</button>
 				<button
+					class="btn btn-primary"
 					id="submit"
 					type="button"
-					class="btn btn-primary"
 					[disabled]="!form.valid"
 					(click)="submit()"
 				>
@@ -218,13 +218,13 @@
 
 			<div class="d-flex justify-content-center mt-4">
 				<button
-					type="button"
 					class="btn btn-outline-secondary mr-2"
+					type="button"
 					(click)="status = 'ready'"
 				>
 					Back to Feedback Form
 				</button>
-				<button type="button" class="btn btn-primary" (click)="submit()">
+				<button class="btn btn-primary" type="button" (click)="submit()">
 					Resend Feedback
 				</button>
 			</div>
