--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -4,17 +4,17 @@
 			<div class="mb-3 mr-5">
 				<asy-search-input
 					placeholder="Search team members..."
-					(applySearch)="dataSource.search($event)"
 					[search]="dataSource.searchEvent$.value"
+					(applySearch)="dataSource.search($event)"
 				></asy-search-input>
 			</div>
 
 			<div class="mb-3 ml-auto">
 				<button
-					type="button"
 					class="btn btn-primary ml-auto"
-					(click)="addMembers()"
+					type="button"
 					*hasTeamRole="team; role: 'admin'"
+					(click)="addMembers()"
 				>
 					<span class="fa-solid fa-plus"></span> Add New
 				</button>
@@ -23,28 +23,28 @@
 	</div>
 
 	<div class="table-content">
-		<table cdk-table [dataSource]="dataSource" asySort asyFilter class="table table-striped">
+		<table class="table table-striped" asyFilter asySort cdk-table [dataSource]="dataSource">
 			<ng-container cdkColumnDef="name">
-				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Name</th>
+				<th asy-sort-header cdk-header-cell *cdkHeaderCellDef>Name</th>
 				<td cdk-cell *cdkCellDef="let member">
 					<div>{{ member.userModel.name }}</div>
 				</td>
 			</ng-container>
 			<ng-container cdkColumnDef="username">
-				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Username</th>
+				<th asy-sort-header cdk-header-cell *cdkHeaderCellDef>Username</th>
 				<td cdk-cell *cdkCellDef="let member">
 					<div>{{ member.userModel.username }}</div>
 				</td>
 			</ng-container>
 			<ng-container cdkColumnDef="lastLogin">
-				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Last Login</th>
+				<th asy-sort-header cdk-header-cell *cdkHeaderCellDef>Last Login</th>
 				<td cdk-cell *cdkCellDef="let user">
 					<div
 						class="hide-overflow"
-						tooltip="{{ user.userModel.lastLogin | utcDate }}"
 						container="body"
+						tooltip="{{ user.userModel.lastLogin | utcDate }}"
 					>
-						{{ user.userModel.lastLogin | agoDate : false }}
+						{{ user.userModel.lastLogin | agoDate: false }}
 					</div>
 				</td>
 			</ng-container>
@@ -69,17 +69,17 @@
 				<td cdk-cell *cdkCellDef="let member">
 					<div
 						class="dropdown dropdown-table-inline"
-						dropdown
 						container="body"
+						dropdown
 						*hasTeamRole="team; role: 'admin'; else: readOnlyRole"
 					>
 						<span class="dropdown-toggle" dropdownToggle>
 							<span class="mr-1">{{ member.roleDisplay }}</span>
 						</span>
-						<ul *dropdownMenu class="dropdown-menu" role="menu">
+						<ul class="dropdown-menu" role="menu" *dropdownMenu>
 							<li
-								*ngFor="let role of teamRoleOptions"
 								[value]="role.role"
+								*ngFor="let role of teamRoleOptions"
 								(click)="updateRole(member, role.role)"
 							>
 								<a class="dropdown-item">{{ role.label }}</a>
@@ -96,11 +96,11 @@
 				<td cdk-cell *cdkCellDef="let member">
 					<a
 						class="btn-icon"
-						tooltip="Remove Member"
 						container="body"
 						placement="bottom"
-						(click)="removeMember(member)"
+						tooltip="Remove Member"
 						*hasTeamRole="team; role: 'admin'; and: member.explicit"
+						(click)="removeMember(member)"
 					>
 						<span class="fa-solid fa-lg fa-trash"></span>
 					</a>
