--- a/src/app/site/example/loading-overlay/example-loading-overlay.component.html
+++ b/src/app/site/example/loading-overlay/example-loading-overlay.component.html
@@ -2,9 +2,9 @@
 	<h1>Loading Overlay</h1>
 	<div class="position-relative mb-3" style="border: dashed black">
 		<loading-overlay
-			[isLoading]="isLoading"
-			[isError]="isError"
 			[errorMessage]="errorMessage"
+			[isError]="isError"
+			[isLoading]="isLoading"
 			(retry)="handleRetry()"
 		></loading-overlay>
 		<p>This is the where the loaded content will go</p>
@@ -13,10 +13,10 @@
 	</div>
 
 	<div class="btn-group">
-		<button class="btn btn-primary" (click)="toggleLoading()" [disabled]="isError">
+		<button class="btn btn-primary" [disabled]="isError" (click)="toggleLoading()">
 			{{ isLoading ? 'Stop' : 'Start' }} Loading
 		</button>
-		<button class="btn btn-primary ml-3" (click)="toggleError()" [disabled]="!isLoading">
+		<button class="btn btn-primary ml-3" [disabled]="!isLoading" (click)="toggleError()">
 			{{ isError ? 'Hide' : 'Show' }} Error
 		</button>
 	</div>
